[AI-INCIDENT-ENVIRONMENT]
name = "incident-env"
version = "0.1.0"
description = "Incident response OpenEnv environment"
authors = [{name = "Sriram"},{name = "Vishala"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
