[project]
name = "incident-env"
version = "0.1.0"
description = "Incident response OpenEnv environment"
authors = [
    {name = "Sriram"},
    {name = "Vishala"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
